<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingTop="4dp"
    android:paddingRight="16dp"
    android:paddingBottom="4dp">

    <ImageView
        android:layout_marginRight="8dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/message_person_thumbnail"
        android:src="@drawable/person_icon"
        android:contentDescription="@string/contact_image_description" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginRight="32dp"
        android:background="#ffcccccc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/message_contact_name_text"
            android:id="@+id/message_person_name_text" />

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_android_black_48dp"
            android:id="@+id/message_content_image"
            android:contentDescription="@string/message_image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/message_text"
            android:id="@+id/message_content_text"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/message_timestamp_text"
            android:id="@+id/message_timestamp_text"
            android:layout_marginTop="4dp" />
    </LinearLayout>

</LinearLayout>