<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:mContext="atlantis.com.atlantis.communications.nearcommunications.usbcable.UsbCableActivity">

    <TextView
        android:id="@+id/bluetooth_textview"
        android:text="@string/title_activity_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_discover_text"
        android:id="@+id/scan_bluetooth"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/bluetooth_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/send_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message_button_text"
        android:id="@+id/send_btn"
        android:layout_below="@+id/scan_bluetooth"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_button_text"
        android:id="@+id/host_btn"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/bluetooth_textview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
