<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/conversation_ripple"
    android:focusable="true"
    android:clickable="true"
    android:padding="16dp">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/sync_method_icon"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/sync_method_icon_description" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sync_method_name_text"
            android:id="@+id/sync_method_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sync_method_description_text"
            android:id="@+id/sync_method_description" />
    </LinearLayout>

</LinearLayout>