<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/conversation_ripple"
    android:focusable="true"
    android:clickable="true">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/conversation_person_thumbnail"
        android:layout_marginRight="16dp"
        android:src="@drawable/person_icon"
        android:contentDescription="@string/conversation_icon_description" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/conversation_name_text"
            android:id="@+id/conversation_name_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/conversation_message_text"
            android:id="@+id/conversation_message"
            android:maxLines="1" />
    </LinearLayout>

</LinearLayout>