<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/conversation_ripple"
    android:focusable="true"
    android:clickable="true"
    android:padding="16dp">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/notebook_sync_status_icon"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/sync_method_icon_description" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/design_medium_text"
            android:id="@+id/contact_display" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:id="@+id/notebook_percentage_left_container">

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/notebook_percentage_left_progress_bar"
                android:layout_gravity="center"
                android:progress="80"
                android:layout_weight="1"
                android:layout_marginRight="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/notebook_percentage_left_format"
                android:id="@+id/notebook_percentage_left_text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/notebook_not_synced_text"
            android:id="@+id/notebook_sync_text" />
    </LinearLayout>

</LinearLayout>
