<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:mContext="atlantis.com.atlantis.fragments.NotebookFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/contact_name_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/contact_name_placeholder_text"
                android:id="@+id/notebook_contact_name_text" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_sync_notebook_title"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/notebook_available_bar"
                    android:text="@string/available_notebook_cache_text"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/notebook_size_progress_bar"
                    android:progress="0"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:gravity="bottom" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/notebook_size_label"
                    android:id="@+id/textView"
                    android:layout_marginBottom="8dp" />

                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/notebook_size_seek_bar"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:progress="0" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/text_estimate_view" />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/image_estimate_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_sync_button_text"
                android:enabled="true"
                android:id="@+id/re_sync_notebook_button"
                android:layout_weight="1"
                android:layout_marginTop="8dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
